--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,8 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">{{ timer.name }}</h5>
-              <p class="card-text">{{ timer.time }}</p>
+              <p class="card-text">Time Left: {{ timer.timeLeft }}</p>
+              <p class="card-text">Scheduled Time: {{ timer.scheduledTime }}</p>
             </div>
           </div>
         </div>
