--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="app">
     <div class="container">
-      <h1 class="text-center mt-4">Prayer Timers</h1>
+      <h1 class="text-center mt-4">Prayer Timers 5</h1>
       <div class="row mt-5">
         <div class="col-sm-4" v-for="timer in timers" :key="timer.name">
           <div class="card">
